Bug #38177 Public headers prevent applications from being built with warnings turned on
Submitted: 16 Jul 2008 17:46 Modified: 5 Oct 2008 18:54
Reporter: Monty Taylor
Status: Closed
Category:Server: NDBAPI Severity:S3 (Non-critical)
Version:6.2 OS:Linux
Assigned to: Bugs System Target Version:

[16 Jul 2008 17:46] Monty Taylor
Description:
There are a few non-critical issues in the public NDB API headers (duplicate defines,
unused parameters in inline functions, etc) that prevent applications using the NDB API
from building with flags like -pedantic or -Wall in conjunction with -Werror.

How to repeat:
Grab the latest version of ndb-bindings. 

  bzr branch lp:ndb-bindings
  cd ndb-bindings

Configure with warnings and errors turned on.

  ./configure --enable-pedantic-warnings --enable-fail 

Go to the C++ test programs subdir

  cd cpp

Run make

  make

See the carnage.

Suggested fix:
Remove duplicate defines. 
Fix the silly lack-of-inline1 macro in the inline check in my_global.h.
Mark unused parameters as usused in the inline header functions by (void)ing them out.
[16 Jul 2008 17:49] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/49860

2633 Monty Taylor	2008-07-16
      BUG#38177 - Public headers prevent applications from being built with warnings
turned on
      
      Fixed all of the build warnings produced by compiling a test program with: "-W -Wall
-Wextra -std=gnu++98 -pedantic -Wundef -Wredundant-decls -Wno-long-long
-Wno-strict-aliasing  -Werror"
[16 Jul 2008 17:58] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/49867

2633 Monty Taylor	2008-07-16
      BUG#38177 - Public headers prevent applications from being built with warnings
turned on
      
      Fixed all of the build warnings produced by compiling a test program with: "-W -Wall
-Wextra -std=gnu++98 -pedantic -Wundef -Wredundant-decls -Wno-long-long
-Wno-strict-aliasing  -Werror"
[16 Jul 2008 18:57] Monty Taylor
If you're doing the reproduce it steps... you'll need to run 

  ./autogen.sh

Before running configure ... sorry. :)
[5 Aug 2008 23:17] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/50962

2633 Monty Taylor	2008-08-05
      BUG#38177 - Public headers prevent applications from being built with warnings
      turned on
            
      Fixed all of the build warnings produced by compiling a test program with: "-W -Wall
-Wextra -std=gnu++98 -pedantic -Wundef -Wredundant-decls -Wno-long-long
-Wno-strict-aliasing  -Werror"
[7 Aug 2008 3:30] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/51053

2633 Monty Taylor	2008-08-06
      BUG#38177 - Public headers prevent applications from being built with warnings
turned on
                  
      Fixed all of the build warnings produced by compiling a test program with: "-W -Wall
-Wextra -std=gnu++98 -pedantic -Wundef -Wredundant-decls -Wno-long-long
-Wno-strict-aliasing  -Werror"
[7 Aug 2008 3:35] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/51054

2640 Monty Taylor	2008-08-06
      BUG#38177 - Public headers prevent applications from being built with warnings
turned on
                        
      Fixed all of the build warnings produced by compiling a test program with: "-W -Wall
-Wextra -std=gnu++98 -pedantic -Wundef -Wredundant-decls -Wno-long-long
-Wno-strict-aliasing  -Werror"
[12 Sep 2008 10:41] Jon Stephens
Documented bugfix in the NDB 6.2.16 and 6.3.17 changelogs as follows:

        Problems with the public headers prevented applications 
        from being built with warnings turned on.
[5 Oct 2008 18:54] Jon Stephens
Already documented as noted above for NDB 6.2/6.3; closing.
[13 Dec 2008 0:26] Bugs System
Pushed into 6.0.6-alpha  (revid:monty@inaugust.com-20080807013435-wtveleap4vydpkvs)
(version source revid:jonas@mysql.com-20080812185642-1nevjb94zj621dqx) (pib:5)