BUG#38177 - Public headers prevent applications from being built with warnings turned on

Fixed all of the build warnings produced by compiling a test program with: "-W -Wall -Wextra -std=gnu++98 -pedantic -Wundef -Wredundant-decls -Wno-long-long -Wno-strict-aliasing  -Werror"