storage/ndb/include/ndbapi/NdbOperation.hpp
@@ -1447,6 +1447,9 @@ inline
 int
 NdbOperation::checkMagicNumber(bool b)
 {
+#ifndef NDB_NO_DROPPED_SIGNAL
+  (void)b;  // unused param in this context
+#endif
   if (theMagicNumber != 0xABCDEF01){
 #ifdef NDB_NO_DROPPED_SIGNAL
     if(b) abort();
@@ -1566,7 +1569,8 @@ NdbOperation::NdbCon(NdbTransaction* aNdbCon)
 
 inline
 int
-NdbOperation::equal(const char* anAttrName, const char* aValue, Uint32 len)
+NdbOperation::equal(const char* anAttrName, const char* aValue,
+                    __attribute__((__unused__))Uint32 len)
 {
   return equal(anAttrName, aValue);
 }
@@ -1601,7 +1605,8 @@ NdbOperation::equal(const char* anAttrName, Uint64 aPar)
 
 inline
 int
-NdbOperation::equal(Uint32 anAttrId, const char* aValue, Uint32 len)
+NdbOperation::equal(Uint32 anAttrId, const char* aValue,
+                    __attribute__((__unused__))Uint32 len)
 {
   return equal(anAttrId, aValue);
 }
@@ -1636,7 +1641,8 @@ NdbOperation::equal(Uint32 anAttrId, Uint64 aPar)
 
 inline
 int
-NdbOperation::setValue(const char* anAttrName, const char* aValue, Uint32 len)
+NdbOperation::setValue(const char* anAttrName, const char* aValue,
+                       __attribute__((__unused__))Uint32 len)
 {
   return setValue(anAttrName, aValue);
 }
@@ -1685,7 +1691,8 @@ NdbOperation::setValue(const char* anAttrName, double aPar)
 
 inline
 int
-NdbOperation::setValue(Uint32 anAttrId, const char* aValue, Uint32 len)
+NdbOperation::setValue(Uint32 anAttrId, const char* aValue,
+                       __attribute__((__unused__))Uint32 len)
 {
   return setValue(anAttrId, aValue);
 }
