storage/ndb/include/ndbapi/NdbTransaction.hpp
@@ -1091,7 +1091,7 @@ NdbTransaction::get_send_size()
 
 inline
 void
-NdbTransaction::set_send_size(Uint32 send_size)
+NdbTransaction::set_send_size(__attribute__((__unused__))Uint32 send_size)
 {
   return;
 }
